# isy_sem_01

Computergrafik/RayTracing_Exercise/: CMakeLists.txt
Computergrafik/RayTracing_Exercise/doc/: CMakeLists.txt  Doxyfile.in  layout.xml  mainpage.dox  style.css
Computergrafik/RayTracing_Exercise/doc/html/: annotated.html  class_camera-members.html  class_camera.html  class_image-members.html  class_image.html  class_light-members.html  class_material-members.html  class_mesh-members.html  class_mesh.html  class_object-members.html  class_plane-members.html  class_plane.html  class_ray-members.html  class_ray.html  class_sphere-members.html  class_sphere.html  class_stop_watch-members.html  class_stop_watch.html  classes.html  classvec3-members.html  classvec3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  pages.html  raytrace_8cpp.html  struct_light.html  struct_material.html  struct_mesh_1_1_triangle-members.html  struct_mesh_1_1_triangle.html  struct_mesh_1_1_vertex-members.html  struct_mesh_1_1_vertex.html  (+4 more)
Computergrafik/RayTracing_Exercise/scenes/cube/: cube.sce
Computergrafik/RayTracing_Exercise/scenes/office/: office.sce
Computergrafik/RayTracing_Exercise/scenes/spheres/: spheres.sce  spheres.tga
Computergrafik/RayTracing_Exercise/src/: Camera.h  Image.h  Light.h  Makefile  Mesh.cpp  Mesh.h  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  StopWatch.h  raytrace.cpp  vec3.h
(+64 files in other folders)
